# rhodo

./: Cargo.toml  README.md
.github/workflows/: ci.yaml
benches/: swc.rs
src/: debug.rs  error.rs  hash.rs  iter.rs  lib.rs  node.rs  resample.rs  serialize.rs  spatial.rs  surgeon.rs  swc.rs  tree.rs  util.rs
src/algos/: mod.rs
src/hash/: map.rs  mod.rs  set.rs
src/simplify/: mod.rs
