[package]
name = "rhodo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = {version = "0.8.6", default-features = false, features = ["compile-time-rng", "serde", "std"]}
num-traits = "0.2.17"
thiserror = "1.0.50"
