[package]
name = "rhodo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.7"
# ahash = {version = "0.8.6", default-features = false, features = ["compile-time-rng", "serde", "std"]}
ascii_tree = {version = "0.1.1", optional = true }
fastrand = {version = "2.0.1", optional = true }
num-traits = "0.2.17"
serde = { version = "1.0.195", features= ["serde_derive"], optional = true }
simples = "0.1.1"
swc-neuron = { version = "0.3.0", optional = true }
thiserror = "1.0.50"

[features]
debug = ["ascii_tree", "fastrand"]
neuro = ["swc-neuron"]

[dev-dependencies]
criterion = "0.5.1"
ascii_tree = "0.1.1"
fastrand = "2.0.1"
serde_json = "1.0.111"
ahash = "0.8.7"

[[bench]]
name = "hash"
harness = false
required-features = ["debug"]
